--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@ body {
   margin: 0;
 }
 
-
 video {
   width: 100%;
   height: auto;
@@ -13,4 +12,16 @@ video {
 body {
   text-align: center;
   padding-top: 20px;
+}
+
+/** additional css for game selection panel **/
+
+.card-square {
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+}
+
+.extra-padding {
+    margin-bottom: 100px;
 }
