--- a/src/index.css
+++ b/src/index.css
@@ -87,12 +87,12 @@ body {
 
 /* Dropdown Button */
 .dropbtn {
-  background-color: #3498DB;
-  color: white;
+  /* background-color: #3498DB; */
+  /* color: white;
   padding: 16px;
   font-size: 16px;
   border: none;
-  cursor: pointer;
+  cursor: pointer; */
 }
 
 /* Dropdown button on hover & focus */
