functions to add roster

--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,15 @@ body {
   display:none;
 }
 
+.content-spacer {
+  display: flex;
+  justify-content: space-between;
+  max-width: 200px;
+  margin: 0 auto;
+  /* background: #A0C5E8; */
+  padding: 10px 0;
+}
+
 
 
 
